# small-folk

./: Cargo.toml  README.md  code_standby.rs  communes_html.hbs  config_actions.json  error.hbs  form_countries.hbs  tableau_html.hbs
core/: Cargo.toml
core/src/: lib.rs
plugin_a/: Cargo.toml
plugin_a/src/: lib.rs
src/: appdyn.rs  dynamic_router.rs  main.rs
src/appdyn/: dynamic_router.rs  sql_request.rs  sql_request_sqlite.rs  view.rs
