[package]
name = "smallfk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
sqlx = { version = "0.5", features = [  "runtime-async-std-native-tls", "mysql" ] }
rusqlite = { version = "0.29.0", features = ["bundled", "column_decltype"] }
serde = "1.0.159"
serde_json = "1.0.95"
tide = "0.16.0"
handlebars = "4.3.6"
urlencoding = "1.0.0"
