[package]
name = "core"
version = "0.1.0"
authors = ["Stephanux"]
edition = "2024"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
sqlx = { version = "0.5", features = [  "runtime-async-std-native-tls", "mysql" ] }
serde = "1.0.159"
serde_json = "1.0.95"
tide = "0.16.0"