[package]
name = "plugin_a"
version = "0.1.0"
authors = ["Andrew Gaspar <agaspar@lanl.gov>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
core = { path = "../core" }
sqlx = { version = "0.5", features = [  "runtime-async-std-native-tls", "mysql" ] }
serde = "1.0.159"
serde_json = "1.0.95"
tide = "0.16.0"